src/objects/CMSUserSettings__c.object
<CustomObject>
    <fields>
        <fullName>AudienceAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audience Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CMS Users Settings</relationshipLabel>
        <relationshipName>CMSUsersSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AudienceContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audience Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CMS Users Settings</relationshipLabel>
        <relationshipName>CMSUsersSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audiences__c</fullName>
        <label>Audiences</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>CMS Users Settings</relationshipLabel>
        <relationshipName>CMSUsersSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomRecordId__c</fullName>
        <label>Custom Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CMSUsersSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CMS User Settings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CMS User Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMS Users Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>